[package]
name = "verus_prettyplease"
version = "0.0.0-2025-11-05-1950"
authors = ["David Tolnay <dtolnay@gmail.com>", "The Verus Contributors"]
autoexamples = false
categories = ["development-tools"]
description = "A minimal `syn` syntax tree pretty-printer adapted for Verus"
documentation = "https://docs.rs/prettyplease"
edition = "2021"
exclude = ["cargo-expand"]
keywords = ["rustfmt"]
license = "MIT OR Apache-2.0"
links = "prettyplease-verus02"
repository = "https://github.com/dtolnay/prettyplease"
rust-version = "1.62"

[features]
verbatim = ["verus_syn/parsing"]

[dependencies]
proc-macro2 = { version = "1.0.80", default-features = false }
verus_syn = { version = "=0.0.0-2025-11-05-1950", path = "../syn", default-features = false, features = ["full", "visit", "visit-mut", "extra-traits", "parsing", "printing", "clone-impls"] }

[dev-dependencies]
indoc = "2"
proc-macro2 = { version = "1.0.80", default-features = false }
quote = { version = "1.0.35", default-features = false }
verus_syn = { version = "=0.0.0-2025-08-12-1837", path = "../syn", default-features = false, features = ["clone-impls", "extra-traits", "parsing", "printing", "visit-mut"] }

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.playground]
features = ["verbatim"]

[workspace]
members = ["cargo-expand/update", "examples/update"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(exhaustive)',
  'cfg(prettyplease_debug)',
  'cfg(prettyplease_debug_indent)',
  'cfg(test)',
] }
