[package]
name = "verus_rustc_driver"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
tracing = { version = "0.1.35" }
serde_json = "1.0.59"
verus_rustc_interface = { path = "../rustc_interface" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "debugapi", "processenv"] }

[features]
llvm = ['verus_rustc_interface/llvm']
rustc_use_parallel_compiler = ['verus_rustc_interface/rustc_use_parallel_compiler']
# TODO max_level_info = ['rustc_log/max_level_info']
# TODO rustc_use_parallel_compiler = ['rustc_data_structures/rustc_use_parallel_compiler', 'rustc_interface/rustc_use_parallel_compiler',
# TODO    'rustc_middle/rustc_use_parallel_compiler']

[package.metadata.rust-analyzer]
rustc_private = true