[package]
name = "verus_rustc_hir_typeck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
smallvec = { version = "=1.8.1", features = ["union", "may_dangle"] }
tracing = "0.1"

[package.metadata.rust-analyzer]
rustc_private = true

