[package]
name = "air"
version = "0.1.0"
authors = ["Chris Hawblitzel <Chris.Hawblitzel@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Note: do not add any dependencies on rustc -- AIR deliberately abstracts away from rustc's internals
[dependencies]
sise = "0.6.0"
getopts = { git = "https://github.com/utaal/getopts.git", branch = "parse-partial" }

[target.'cfg(windows)'.dependencies]
win32job = "1"
