[package]
name = "air"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Note: do not add any dependencies on rustc -- AIR deliberately abstracts away from rustc's internals
[dependencies]
sise = "0.6.0"
getopts = { git = "https://github.com/utaal/getopts.git", branch = "parse-partial" }
z3tracer = { git = "https://github.com/verus-lang/smt2utils.git", rev = "ec4c894d04d7cd39c9a8aa1eda51db71cc54fe61" }
serde = { version = "1", features = ["derive", "rc"] }
indexmap = { version = "1" }
yansi = "0.5"

[target.'cfg(windows)'.dependencies]
win32job = "1"

[features]
singular = []
axiom-usage-info = []
