[package]
name = "air"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Note: do not add any dependencies on rustc -- AIR deliberately abstracts away from rustc's internals
[dependencies]
sise = { workspace = true }
getopts = { workspace = true }
smt-scope = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
indexmap = { workspace = true }
yansi = { workspace = true }

[target.'cfg(windows)'.dependencies]
win32job = "1"

[features]
singular = []

[lints]
workspace = true
