[package]
name = "builtin"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.verus]
is-builtin = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(verus_keep_ghost)',
  'cfg(verus_verify_core)',
] }
