[package]
name = "verus_builtin"
version = "0.0.0-2026-01-11-0057"
edition = "2018"
license = "MIT"
description = "Verus Builtins: Rust definitions for core constructs in Verus"
documentation = "https://verus-lang.github.io/verus/verusdoc/vstd/pervasive"
homepage = "https://github.com/verus-lang/verus"
repository = "https://github.com/verus-lang/verus"
readme = "../../README.md"
keywords = ["verus", "verified-rust", "verification"]
categories = ["development-tools"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.verus]
is-builtin = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(verus_keep_ghost)',
  'cfg(verus_verify_core)',
] }
