[package]
name = "verus_builtin_macros"
version = "0.0.0-2025-08-12-1837"
edition = "2018"
license = "MIT"
description = "Verus Builtin Macros: Various macros used by Verus"
homepage = "https://github.com/verus-lang/verus"
repository = "https://github.com/verus-lang/verus"
readme = "../../README.md"
keywords = ["verus", "verified-rust", "verification"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.39"
quote = "1.0"
synstructure = "0.13.2"
syn = { version = "2.0", features = ["full", "visit", "visit-mut", "extra-traits"] }
verus_syn = { version = "=0.0.0-2025-08-12-1837", path = "../../dependencies/syn", features = ["full", "visit", "visit-mut", "extra-traits"] }
verus_prettyplease = { version = "=0.0.0-2025-08-12-1837", path = "../../dependencies/prettyplease" }
convert_case = "0.4"

[package.metadata.verus]
is-builtin-macros = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)'] }

[features]
vpanic = []
