[package]
name = "verus_builtin_macros"
version = "0.0.0-2026-07-12-0122"
edition = "2018"
license = "MIT"
description = "Verus Builtin Macros: Various macros used by Verus"
homepage = "https://github.com/verus-lang/verus"
repository = "https://github.com/verus-lang/verus"
readme = "../../README.md"
keywords = ["verus", "verified-rust", "verification"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
synstructure = { workspace = true }
syn = { workspace = true }
verus_syn = { workspace = true }
verus_prettyplease = { workspace = true }

[package.metadata.verus]
is-builtin-macros = true

[features]
vpanic = []

[lints]
workspace = true
