[package]
publish = false
name = "cargo-verus"
version = "0.1.0"
edition = "2021"
description = "A Cargo subcommand that enables verification of Rust code as part of the normal Cargo workflow."

[dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
cargo-verus-toolchains = { workspace = true }
clap-cargo = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
hex = { workspace = true }
rustc_tools_util = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
cargo-verus-toolchains = { workspace = true }
rustc_tools_util = { workspace = true }

[lints]
workspace = true
