[package]
name = "rust_verify"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
air = { path = "../air" }
vir = { path = "../vir" }
serde = "1"
serde_json = { version = ">=1.0.95", features = ["preserve_order"] }
bincode = "1.0.1"
sise = "0.6.0"
num-bigint = "0.4.4"
num-format = "0.4.0"
getopts = { git = "https://github.com/utaal/getopts.git", branch = "parse-partial" }
regex = "1"
internals_interface = { path = "../tools/internals_interface" }
indicatif = "0.17.7"
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }
indexmap = { version = "1" }

[target.'cfg(windows)'.dependencies]
win32job = "1"

[dev-dependencies]
rust_verify_test_macros = { path = "../rust_verify_test_macros" }

[features]
singular = ["vir/singular", "air/singular"]
axiom-usage-info = ["vir/axiom-usage-info", "air/axiom-usage-info"]

[package.metadata.rust-analyzer]
rustc_private = true
