[package]
name = "rust_verify"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
air = { workspace = true }
bincode-next = { workspace = true }
console = { workspace = true }
getopts = { git = "https://github.com/utaal/getopts.git", branch = "parse-partial" }
hex = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
internals_interface = { workspace = true }
num-bigint = { workspace = true }
num-format = { workspace = true }
regex = { workspace = true }
rustc_mir_build_verus = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
sise = { workspace = true }
vir = { workspace = true }

[target.'cfg(windows)'.dependencies]
win32job = "1"

[dev-dependencies]
rust_verify_test_macros = { path = "../rust_verify_test_macros" }

[features]
singular = ["vir/singular", "air/singular"]

[package.metadata.rust-analyzer]
rustc_private = true

[lints]
workspace = true
