[package]
name = "rust_verify_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
air = { path = "../air" }
vir = { path = "../vir" }

[dev-dependencies]
rust_verify_test_macros = { path = "../rust_verify_test_macros" }
regex = "1"
serde = "1"
serde_json = "1"
yansi = "0.5"

[features]
singular = ["vir/singular", "air/singular"]

[package.metadata.rust-analyzer]
rustc_private = true