[package]
name = "rust_verify_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
air = { workspace = true }
vir = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
rust_verify_test_macros = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
yansi = { workspace = true }

[features]
singular = ["vir/singular", "air/singular"]

[package.metadata.rust-analyzer]
rustc_private = true

[lints]
workspace = true
