[package]
name = "rustc_borrowck"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
itertools = "0.12"
tracing = "0.1"
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
rustc_mir_transform_verus = { path = "../rustc_mir_transform", package = "rustc_mir_transform" }
# tidy-alphabetical-end

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bootstrap)'] }
