[package]
name = "verus_rustc_interface"
version = "0.0.0"
edition = "2021"

[lib]
doctest = false
crate-type = ["rlib", "dylib"]

[dependencies]
libloading = "0.7.1"
tracing = "0.1"
rustc-rayon-core = { version = "0.4.0", optional = true }
rayon = { version = "0.4.0", package = "rustc-rayon", optional = true }
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi"] }

[features]
rustc_use_parallel_compiler = ['rayon', 'rustc-rayon-core']
