[package]
name = "rustc_mir_transform"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
tracing = "0.1"
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
rustc_mir_build_verus = { path = "../rustc_mir_build", package = "rustc_mir_build" }
# tidy-alphabetical-end

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bootstrap)'] }
