[package]
name = "verus_state_machines_macros"
version = "0.0.0-2026-06-14-0213"
edition = "2018"
license = "MIT"
description = "Verus State-Machine Macros: Various macros used by Verus to define and reason about atomic and sharded state machines"
homepage = "https://github.com/verus-lang/verus"
repository = "https://github.com/verus-lang/verus"
documentation = "https://verus-lang.github.io/verus/state_machines/"
readme = "../../README.md"
keywords = ["verus", "verified-rust", "verification"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verus_syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
indexmap = { workspace = true }

[lib]
proc-macro = true

[lints]
workspace = true
