[package]
name = "verus"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
sha2 = "0.10.2"
yansi = "0.5"
anstream = "0.3.2"
is-terminal = "0.4.9"
uuid = { version = "1.4.0", features = [ "v4" ] }
common-path = "1.0.0"
toml = "0.7.4"

[target."cfg(windows)".dependencies]
win32job = "1"

[build_dependencies]
regex = "1"