[package]
name = "verus"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
yansi = { workspace = true }
zip = { workspace = true }

git2 = { workspace = true, optional = true }
is-terminal = { workspace = true, optional = true  }
rand = { workspace = true, optional = true  }

[features]
default = []
record-history = ["git2", "is-terminal", "rand"]

[target."cfg(windows)".dependencies]
win32job = "1"

[build-dependencies]
regex = "1"

[lints]
workspace = true
